# Darwinbots-Modern

./: .gitignore  Cargo.toml  README.md
.github/workflows/: modern-cross-platform.yml
docs/: README.md
docs/parity/: control-surface-matrix.json  control-surface-matrix.md  gui-parity-report.md
docs/plans/: 2026-07-14-organism-visual-phenotypes-design.md
docs/verification/: db2-defaults-and-sysvars-audit.md
modern/cli/: Cargo.toml
modern/cli/src/: lib.rs  main.rs
modern/cli/tests/: commands.rs
modern/docs/: verification.md
modern/engine/: Cargo.toml
modern/engine/src/: backend.rs  biology.rs  config.rs  corpse.rs  db2_sysvars_248.txt  dna.rs  environment.rs  error.rs  ffi.rs  history.rs  id.rs  lib.rs  mutation.rs  persistence.rs  physics.rs  sensing.wgsl  shot.rs  spatial.rs  spatial_grid.wgsl  species.rs  stats.rs  sysvars.rs  timing.rs  vegetation.rs  vision.rs  visual_phenotype.rs  vm.rs  world.rs
modern/engine/src/physics/: collision.rs  environment.rs  movement.rs
modern/engine/src/shot/: effects.rs  projectile.rs
modern/engine/tests/: contracts.rs  corpses_collisions.rs  db2_physics.rs  db2_projectiles.rs  db2_starter_ecology.rs  db2_vegetation.rs  db2_vision.rs  environment_world.rs  gpu_ffi.rs  history_records.rs  legacy_distribution.rs  manual_tools.rs  mutation_lifecycle.rs  sensing_compatibility.rs  shot_state.rs  spawn_placement.rs  species_ecology.rs  starter_ecology.rs  ties_multibot.rs  toroidal_world.rs  visual_phenotypes.rs  vm.rs  vm_implicit_conditions.rs  world_systems.rs  zerobot_progression.rs
modern/engine/tests/support/: db2_fixtures.rs  mod.rs
(+65 files in other folders)
