[package]
name = "darwinbots-cli"
version = "0.1.0"
description = "Headless command-line runner for Darwinbots Modern simulations"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
darwinbots-engine = { path = "../engine" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

