[package]
name = "darwinbots-engine"
version = "0.1.0"
description = "Headless CPU and GPU simulation engine for Darwinbots Modern"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
rayon = "1"
smallvec = { version = "1", features = ["const_generics"] }
wgpu = "29"

[dev-dependencies]
tempfile = "3"
